<resources>

    <!--Home-->
    <string name="app_name">Jokenpo</string>
    <string name="btn_inicio">Iniciar</string>
    <string name="tool_bar">Jokenpo</string>
    <string name="txt_inicio">Bem vindo ao Jokenpo</string>
    <string name="txt_home">Home</string>

    <!--Seleção da jogada-->
    <string name="txt_nome_jogador">Jogador 1</string>
    <string name="txt_selecao_jogada">Selecionar jogada</string>
    <string name="txt_resultado">Resultado</string>

    <!--Resultado-->
    <string name="txt_resultado_principal">Resultado</string>
    <string name="txt_jogador_ganhou">O jogador xxx ganhou</string>

    <!--Resultado-->
    <string name="txt_back_home">Reiniciar</string>

</resources>